Added controller
